# SGD_projekt

./: CMakeLists.txt  main.cpp
